# ex_tauri

./: .gitignore  CHANGELOG.md  README.md  TAURI_OS_FEATURES_PLAN.md  mix.exs
example/: README.md  mix.exs
example/assets/css/: app.css
example/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
example/lib/: example_desktop.ex  example_desktop_web.ex
example/lib/example_desktop/: application.ex  notes.ex  repo.ex  starter.ex
example/lib/example_desktop/notes/: note.ex
example/lib/example_desktop_web/: endpoint.ex  router.ex  telemetry.ex
example/lib/example_desktop_web/components/: core_components.ex  layouts.ex
example/lib/example_desktop_web/controllers/: error_html.ex  error_json.ex  tauri_controller.ex
example/lib/example_desktop_web/live/: notes_live.ex
example/priv/repo/: seeds.exs
example/priv/repo/migrations/: 20230823230204_add_notes.exs
example/priv/static/assets/: app.css  app.js
example/src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
example/src-tauri/capabilities/: default.json
example/src-tauri/src/: main.rs
example/test/: test_helper.exs
example/test/support/: conn_case.ex  data_case.ex
lib/: ex_tauri.ex  tauri.ex
lib/ex_tauri/: shutdown_manager.ex
lib/mix/tasks/: ex_tauri.build.ex  ex_tauri.dev.ex  ex_tauri.ex  ex_tauri.icon.ex  ex_tauri.info.ex  ex_tauri.install.ex  ex_tauri.signer.ex  tauri.ex  tauri.install.ex
test/: README.md  desktop_test.exs  ex_tauri_build_command_test.exs  ex_tauri_build_release_test.exs  ex_tauri_integration_test.exs  ex_tauri_test.exs
(+5 files in other folders)
